fix: suggested changes have been adopted
